tests/assets/test_suites/w3c_wsdl20/documents/bad/Schema-3B/Schema.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Schema-3B/Schema.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:tns="http://example.org/"
	xmlns:person="http://example.org/Person/">

	<wsdl:documentation>
		This test shows an invalid use of a schema QName
		reference. The input and output elements reference
		the name element in the namespace 
		http://example.org/Person/ but this namespace has
		not been imported.
		
		This test violates assertions Types-1300000,
		Types-1300001 and Description-0024.
	</wsdl:documentation>
	
	<wsdl:interface name="People">
		<wsdl:operation name="getPerson" pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input element="person:name"></wsdl:input>
			<wsdl:output element="person:name"></wsdl:output>
		</wsdl:operation>
	</wsdl:interface>
</wsdl:description>
